--- a/biblio.html
+++ b/biblio.html
@@ -1,9 +1,74 @@
-<h2>Bibliographie</h2>
+<!DOCTYPE HTML>
 
-<p>Manufacturing Processes 1: Cutting Par Fritz Klocke
-    <br/><br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz
-    <br/><br/>Mechanical Vibrations: Applications to Equipment Par Yvon Mori
-    <br/><br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. Par ANANDA NATARAJAN, R.
-    <br/><br/><a href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html</a>
-    <br/><br/><a href="https://www.enocean.com/en/">https://www.enocean.com/en/</a>
-</p>
+<html lang="fr">
+
+<head>
+    <meta charset="utf-8" />
+    <title>Des objets connectés autonomes</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script async src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+</head>
+
+<body>
+
+    <header id="header2">
+
+        <nav id="nav">
+            <h1>Des objets<br/> connectés<br/> autonomes</h1>
+            <ul id="menu">
+                <li><a href="presentation.html">Présentation</a></li>
+                <li><a>Expérimentations</a>
+                    <ul>
+                        <li><a href="solar.html">Capteur Solaire</a></li>
+                        <li><a href="piezo.html">Piezoélectricité</a></li>
+                        <li><a href="seebeck.html">L'effet seebeck</a></li>
+                    </ul>
+                </li>
+                <li><a href="journal.html">Carnet de Bord</a></li>
+                <li><a href="annexes.html">Annexes</a>
+                    <ul>
+                        <li><a href="biblio.html">Bibliographie</a></li>
+                        <li><a href="photos.html">Photos</a></li>
+                        <li><a href="graph.html">Graphiques</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <section id="count">
+        <div id="prev" class="button">&lt</div>
+        <div id="toggleDiapo">Diapo</div>
+        <div id="next" class="button">&gt</div>
+        <div id="diapo">
+            <image id="image" src=""></image>
+        </div>
+    </section>
+    <hr/>
+    <section id="content">
+
+        <h2>Bibliographie</h2>
+
+        <p>Manufacturing Processes 1: Cutting Par Fritz Klocke
+            <br/><br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz
+            <br/><br/>Mechanical Vibrations: Applications to Equipment Par Yvon Mori
+            <br/><br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. Par ANANDA NATARAJAN, R.
+            <br/><br/><a href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html</a>
+            <br/><br/><a href="https://www.enocean.com/en/">https://www.enocean.com/en/</a>
+        </p>
+
+    </section>
+    <hr/>
+    <footer>
+        <p>
+            Bilal Molli - Barthélémy Paléologue - Malo Le Reste<br/> 1<sup>è</sup>Se, Loquidy<br/>
+        </p>
+    </footer>
+    <div id="tothetop"><img src="tothetop.png" title="Vers le haut de la page" /></div>
+</body>
+<script src="script.js"></script>
+
+</html>
