--- a/presentation.html
+++ b/presentation.html
@@ -1,59 +1,130 @@
-<h2>Présentation Générale</h2>
+<!DOCTYPE HTML>
 
-<h3>Problématique</h3>
+<html lang="fr">
 
-<p>Après une semaine laborieuse de recherche (comme vous pouvez le constater dans l'onglet carnet de bord), nous avons finalement décidé de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
+<head>
+    <meta charset="utf-8" />
+    <title>Des objets connectés autonomes</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script async src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+</head>
 
-<h4 id="pb">Comment peut-on rendre les objets connectés électriquement autonomes ?</h4>
+<body>
 
-<h3>L'énergie et les objets connectés</h3>
+    <header id="header2">
 
-<p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (on estime
-    leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut
-    donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
-<hr/>
-<h3>Le problème du Lithium</h3>
+        <nav id="nav">
+            <h1>Des objets<br/> connectés<br/> autonomes</h1>
+            <ul id="menu">
+                <li><a href="presentation.html">Présentation</a></li>
+                <li><a>Expérimentations</a>
+                    <ul>
+                        <li><a href="solar.html">Capteur Solaire</a></li>
+                        <li><a href="piezo.html">Piezoélectricité</a></li>
+                        <li><a href="seebeck.html">L'effet seebeck</a></li>
+                    </ul>
+                </li>
+                <li><a href="journal.html">Carnet de Bord</a></li>
+                <li><a href="annexes.html">Annexes</a>
+                    <ul>
+                        <li><a href="biblio.html">Bibliographie</a></li>
+                        <li><a href="photos.html">Photos</a></li>
+                        <li><a href="graph.html">Graphiques</a></li>
+                    </ul>
+                </li>
+            </ul>
 
-<p style="width:72%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer l'environnement.
-    Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont inflammables et peuvent être
-    sujettes à l'explosion. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en abordant 3 possibles solutions au problème</p>
+        </nav>
 
-<img style="width:20%;float:right;" src="ionexploding.jpg" />
-<hr/>
-<h3>L'effet Photovoltaïque</h3>
+    </header>
 
-<h4>Définition :</h4>
+    <section id="count">
+        <div id="prev" class="button">&lt</div>
+        <div id="toggleDiapo">Diapo</div>
+        <div id="next" class="button">&gt</div>
+        <div id="diapo">
+            <image id="image" src=""></image>
+        </div>
+    </section>
+    <hr/>
+    <section id="content">
 
-<p style="width:72%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"
-    <br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
-<img style="width:20%;float:right;" src="photovolt.png" />
-<h4>Exemple :</h4>
-<p style="width:72%;float:left;">C'est une solution classique et connue de tous mais qui reste très efficace. On pourrait imaginer un tout petit panneau solaire permettant de récupérer suffisament d'énergie pour alimenter un objet connecté de temps en temps. Une autre solution serait
-    de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage de notre cas est que nous ne demandons pas énormément d'énergie, l'objet pourrait alors être en intérieur du moment qu'il reçoit assez de lumière.</p>
+        <h2>
+
+            Présentation Générale</h2>
+
+        <h3>Problématique</h3>
+
+        <p>Après une semaine laborieuse de recherche (comme vous pouvez le constater dans l'onglet carnet de bord), nous avons finalement décidé de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
+
+        <h4 id="pb">Comment peut-on rendre les objets connectés électriquement autonomes ?</h4>
+
+        <h3>L'énergie et les objets connectés</h3>
+
+        <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (on
+            estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu
+            recyclées. Il faut donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
+        <hr/>
+        <h3>Le problème du Lithium</h3>
+
+        <p style="width:72%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer
+            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont
+            inflammables et peuvent être sujettes à l'explosion. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en abordant 3 possibles solutions
+            au problème</p>
+
+        <img style="width:20%;float:right;" src="ionexploding.jpg" />
+        <hr/>
+        <h3>L'effet Photovoltaïque</h3>
+
+        <h4>Définition :</h4>
+
+        <p style="width:72%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant
+            électrique"
+            <br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
+        <img style="width:20%;float:right;" src="photovolt.png" />
+        <h4>Exemple :</h4>
+        <p style="width:72%;float:left;">C'est une solution classique et connue de tous mais qui reste très efficace. On pourrait imaginer un tout petit panneau solaire permettant de récupérer suffisament d'énergie pour alimenter un objet connecté de temps en temps. Une autre solution
+            serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage de notre cas est que nous ne demandons pas énormément d'énergie, l'objet pourrait alors être en intérieur du moment qu'il reçoit assez de lumière.</p>
 
 
-<hr/>
+        <hr/>
 
 
-<h3>La Piezoélectricité</h3>
+        <h3>La Piezoélectricité</h3>
 
-<h4>Définition :</h4>
-<p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
-<img style="width:20%;float:right;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
-<h4>Exemple :</h4>
-<p style="width:72%;float:left;">Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par son activité pour alimenter
-    un bracelet connecté qui se chargerait de collecter les données sur la personne.</p>
-
-
-
-<hr/>
+        <h4>Définition :</h4>
+        <p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
+        <img style="width:20%;float:right;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
+        <h4>Exemple :</h4>
+        <p style="width:72%;float:left;">Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par son activité pour alimenter
+            un bracelet connecté qui se chargerait de collecter les données sur la personne.</p>
 
 
-<h3>L'effet Seebeck</h3>
 
-<h4>Définition :</h4>
-<p style="width:72%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
-<img style="width:20%;float:right;" src="seebeck.bmp" />
-<h4>Exemple :</h4>
-<p style="width:72%;float:left;">Il y a de très nombreuses applications possibles pour cette réaction. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face qui serait donc moins chaude. On pourrait ainsi récupérer
-    l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des vitres, la différence de température intérieur/extérieur serait une source substentielle d'énergie.</p>
+        <hr/>
+
+
+        <h3>L'effet Seebeck</h3>
+
+        <h4>Définition :</h4>
+        <p style="width:72%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann
+            Seebeck"
+            <br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
+        <img style="width:20%;float:right;" src="seebeck.bmp" />
+        <h4>Exemple :</h4>
+        <p style="width:72%;float:left;">Il y a de très nombreuses applications possibles pour cette réaction. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face qui serait donc moins chaude. On pourrait ainsi
+            récupérer l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des vitres, la différence de température intérieur/extérieur serait une source substentielle d'énergie.</p>
+
+    </section>
+    <hr/>
+    <footer>
+        <p>
+            Bilal Molli - Barthélémy Paléologue - Malo Le Reste<br/> 1<sup>è</sup>Se, Loquidy<br/>
+        </p>
+    </footer>
+    <div id="tothetop"><img src="tothetop.png" title="Vers le haut de la page" /></div>
+</body>
+<script src="script.js"></script>
+
+</html>
